themecss.css
a:link {
    color: blue;
    text-decoration: none;
    border: 0px;
}

a:visited {
    color: steelblue;
    text-decoration: none;
}

a:hover {
    color: red;
    text-decoration: none;
}

.active {
    color: red;
}
body {
    text-align: center;
    width="100%";
    margin-left: auto;
    margin-right:auto;
    }

.title {
    margin-top: 30px;
    margin-bottom: -3px;
    font-family: 'Montserrat', 'cursive';
    color: #D1CACA;
    font-size: 40px;
}
form {
    width: 300px;
    display: inline-block;
    margin-left: auto;
    margin-right:auto;
    color: darkgray;
    font-family: "lucida console";
    font-size: 17px;
}
form-lbl {
    display: inline-block;
    color: darkgray;
}
#widthInput, #heightInput, #horizLitesInput, #vertiLitesInput {
    display:inline-block;
    padding: 2px;
    width:150px;
    opacity:.9;
    margin-top: 5px;
    }

#calculate_btn {
        width: 300px;
        margin-top: 10px;
        color: gray;
        opacity:.8;
        padding: 7px;
}

#reset_btn {
    width: 300px;
    margin-top: 5px;
    color: gray;
    opacity:0.7;
    padding: 6px;
    }

#FL_Product {
    display: inline-block;
    margin-bottom: 20px;
    color: #6C71B9;
}
#container_box {
    margin-bottom: 20px;
}

#PSF_Result {
    display:inherit;
    margin-top:15px;
    width:600px;
    text-align: left;
    }
#J1_M1, #J2_M2, #J2_M3 {
  display: none;
  padding-right: 30px;
}
h1 {
    color: white;
    font-family: 'Trebuchet MS';
    font-size: 60px;
}
#mrglasslogo {
    margin-top:40px;
    opacity: 0.9;
}

